fixed gap between service cards

--- a/how-it-works.css
+++ b/how-it-works.css
@@ -1,3 +1,13 @@
+#navbar #menu li:nth-child(2) a::after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: -25px;
+    background: #1A1C59;
+    border-radius: 10px;
+}
 #main-works{
     position: relative;
     z-index: -2;
