--- a/index.css
+++ b/index.css
@@ -94,6 +94,7 @@ p{
     text-decoration: none;
     color: #434343;
     font-weight: 500;
+    position: relative;
 }
 #mobile-menu{
     position: relative;
