--- a/media.css
+++ b/media.css
@@ -4,6 +4,7 @@
     }
     #service-cards {
         grid-template-columns: repeat(2, auto);
+        width: 80%;
     }
 }
 @media (max-width: 768px) {
@@ -83,6 +84,8 @@
     }
     #service-cards {
         grid-template-columns: repeat(1, auto);
+        width: 100%;
+        place-content: center;
     }
     #works-content p{
         width: 80%;
