--- a/services.css
+++ b/services.css
@@ -1,3 +1,13 @@
+#navbar #menu li:nth-child(1) a::after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: -25px;
+    background: #1A1C59;
+    border-radius: 10px;
+}
 #main-services{
     width: 100%;
     z-index: -2;
@@ -16,8 +26,10 @@
 #service-cards{
     display: grid;
     grid-template-columns: repeat(3, auto);
-    place-content: center;
-    /*grid-gap: */
+    width: 100%;
+    max-width: 1330px;
+    margin: auto;
+    place-content: space-between;
     padding-bottom: 70px;
 }
 .service-card-temp{
